--- a/ContosoUniversity/Views/Student/Index.cshtml
+++ b/ContosoUniversity/Views/Student/Index.cshtml
@@ -19,13 +19,13 @@
     {
         <tr>
             <td>@Html.DisplayFor(modelItem => item.LastName)</td>
-            <td>@Html.DisplayFor(modelItem => item.LastName)</td>
-            <td>@Html.DisplayFor(modelItem => item.LastName)</td>
-            @* <td> *@
+            <td>@Html.DisplayFor(modelItem => item.FirstMidName)</td>
+            <td>@Html.DisplayFor(modelItem => item.EnrollmentDate)</td>
+            <td>
             @*     <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> *@
-            @*     <a asp-action="Details" asp-route-id="@item.ID">Details</a> *@
+            <a asp-action="Details" asp-route-id="@item.ID">Details</a>
             @*     <a asp-action="Delete" asp-route-id="@item.ID">Delete</a> *@
-            @* </td> *@
+            </td>
         </tr>
     }
     </tbody>
